# Ad-Helper

./: pyproject.toml  readme.md  readme_cn.md  requirements.txt
src/stv_AdHelper/: main.py  main_ui.py
src/stv_AdHelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stv_AdHelper/core/: window.py  worker.py
src/stv_AdHelper/utils/: cli_utils.py  utils.py
