[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stv_AdHelper"
version = "0.0.2"
authors = [
    { name = "星灿长风v(StarWindv)", email = "starwindv.stv@gmail.com"}
]
description = "Auto send Ad to your game's chat room."
readme = "./readme.md"
license = { text = "GPLv3" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyqt5",
    "pyperclip",
    "pyautogui",
    "stv_utils"
]
urls = { "Homepage" = "https://github.com/StarWindv/Ad-Helper" }

[project.scripts]
sadui = "stv_AdHelper.main_ui:main"
sad = "stv_AdHelper.main:main"


[tool.setuptools]
license-files = []
